# Deepstream-video-summary

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Explain.md  FLEXIBLE_SYSTEM_README.md  Makefile  PERFORMANCE_GUIDE.md  PLAN.md  PROJECT_SUMMARY.md  README.md  deepstream-multi-inference-app  deepstream-multi-source-cpp  deepstream-video-summary-plan.md  deepstream_multi_inference_app.c  deepstream_multi_source_pipeline_full_plan.md  pythonscript.py  tensor_output.csv  test_app.sh  test_flexible_app.sh  test_gstreamer.sh  test_tensor_extraction.sh  testcommand.txt
config/: model_config.txt  pipeline_config.yaml
configs/: basic_pipeline_config.txt  multi_inference_config.yml  multi_inference_pgie_config.txt  omd_vision_config.txt
output/: tensor_output_20250827_105952.csv  tensor_output_20250827_110334.csv  tensor_output_20250828_041706.csv  tensor_output_20250828_042046.csv  tensor_output_20250828_042255.csv  tensor_output_20250828_083556.csv  tensor_output_20250828_084102.csv  tensor_output_20250828_084514.csv  tensor_output_20250828_085051.csv  tensor_output_20250828_100952.csv  tensor_output_20250828_101053.csv  tensor_output_20250828_105222.csv  tensor_output_20250828_105303.csv  tensor_output_20250828_105326.csv
src/cpp/: async_processor.cpp  async_processor.h  main.cpp  pipeline_builder.cpp  pipeline_builder.h  tensor_processor.cpp  tensor_processor.h
src/pipeline/: DeepStreamPipeline.cpp  DeepStreamPipeline.h  PipelineConfig.h
src/utils/: ConfigManager.cpp  ConfigManager.h  Logger.cpp  Logger.h
tests/: test_environment.cpp  test_pipeline_basic.cpp
